// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expect MaterialIcon to return an icon with a settings cog 1`] = `
<i
  className="material-icons"
  style={null}
>
  settings
</i>
`;

exports[`Expect MaterialIcon to return an icon with a settings cog with a custom class 1`] = `
<i
  className="customClassnpm material-icons"
  style={null}
>
  settings
</i>
`;
